5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4464/executions/1773_2185.log
== TEST (2019-06-24 12:43:39) 
-- CODE:
N = input()
n = n//100
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n = n//100
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 12:43:48) 
-- CODE:
N = input()
n = N//100
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n = N//100
TypeError: unsupported operand type(s) for //: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
